Add support for skipping values dynamically
    This commit adds support for variable entries to be skipped dynamically
    by specifying an attribute named "skip_when". The following role
    variables are currently supported:

    * shorewall6_hosts
    * shorewall6_interfaces
    * shorewall6_policy
    * shorewall6_routes
    * shorewall6_rules
    * shorewall6_snat
    * shorewall6_tunnels
    * shorewall6_zones

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,6 +40,8 @@ shorewall6_policy:
   - source: all
     dest: all
     policy: REJECT
+# shorewall6_group_policy: []
+# shorewall6_host_policy: []
 
 shorewall6_interfaces:
   - interface: +
