--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -16,6 +16,15 @@
       register: shorewall6_params
       failed_when: shorewall6_params.stat.mode != "0640"
 
+    - name: Ensure dynamic blacklist support is set correctly
+      command:
+        argv:
+          - grep
+          - -q
+          - ^DYNAMIC_BLACKLIST=ipset-only,disconnect
+          - /etc/shorewall6/shorewall6.conf
+      changed_when: false
+
     - name: Ensure rule from shorewall6_group_rules is present
       command:
         argv:
@@ -34,11 +43,22 @@
           - /etc/shorewall6/rules
       changed_when: false
 
-    - name: Ensure dynamic blacklist support is set correctly
+    - name: Ensure skipped rule from shorewall_host_rules is not present
       command:
         argv:
           - grep
           - -q
-          - ^DYNAMIC_BLACKLIST=ipset-only,disconnect
-          - /etc/shorewall6/shorewall6.conf
+          - ^SMTP(ACCEPT) net $FW
+          - /etc/shorewall6/rules
+      register: grep
+      changed_when: false
+      failed_when: not grep.failed
+
+    - name: Ensure non-skipped rule from shorewall_host_rules is present
+      command:
+        argv:
+          - grep
+          - -q
+          - ^DNS(REJECT) net:2606:4700:4700::1111 $FW
+          - /etc/shorewall6/rules
       changed_when: false
