Fix lint error in command handler

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,6 +3,7 @@
   command: shorewall6 check
   notify: restart shorewall6
   ignore_errors: "{{ ansible_check_mode }}"
+  changed_when: false
 
 - name: Restart Shorewall6
   listen: restart shorewall6
