--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,69 +5,96 @@ name: CI
   pull_request:
   push:
   schedule:
-    - cron: "13 11 * * 3"
+    - cron: "33 12 * * 3"
   workflow_dispatch:
 
 defaults:
   run:
-    working-directory: "metabrainz.shorewall6"
+    working-directory: metabrainz.shorewall6
 
 jobs:
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the codebase.
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: "metabrainz.shorewall6"
+          path: metabrainz.shorewall6
 
-      - name: Set up Python 3.
+      - name: Set up Python 3
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      - name: Install test dependencies.
+      - name: Install dependencies
         run: pip3 install yamllint ansible ansible-lint
 
-      - name: Lint code.
+      - name: Run lint
         run: |
           yamllint .
           ansible-lint
 
-  molecule:
-    name: Molecule
+  test:
+    name: Test (py${{ matrix.python }} ansible${{ matrix.ansible }} ${{ matrix.distro }})
     runs-on: ubuntu-latest
+    needs:
+      - lint
     strategy:
       matrix:
+        python:
+          - "3.10"
+          - "3.11"
+        ansible:
+          - 5
+          - 6
+          - 7
         distro:
           - ubuntu2004
-
+          - ubuntu2204
     steps:
-      - name: Check out the codebase.
-        uses: actions/checkout@v3
-        with:
-          path: "metabrainz.shorewall6"
-
-      - name: Set up Python 3.
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
-      - name: Install test dependencies.
-        run: pip3 install ansible molecule-plugins[docker] docker
-
       - name: Load required kernel modules
         run: >
           sudo modprobe
-          ip6_tables ip6t_REJECT nf_conntrack_ipv6 
+          ip6_tables ip6t_REJECT nf_conntrack_ipv6
           xt_conntrack xt_connmark xt_state
 
-      - name: Run Molecule tests.
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          path: metabrainz.shorewall6
+
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python }}
+
+      - name: Generate test-requirements.txt
+        run: |
+          cat <<EOF > test-requirements.txt
+          ansible==${{ matrix.ansible }}.*
+          docker==6.*
+          molecule-plugins[docker]
+          # https://github.com/docker/docker-py/issues/3113
+          urllib3<2.0
+          EOF
+          echo "REQS_HASH=$(sha256sum test-requirements.txt | awk '{ print $1 }')" >> "$GITHUB_ENV"
+
+      - name: Cache pip directory
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-py${{ matrix.python }}-ansible${{ matrix.ansible }}-${{ env.REQS_HASH }}
+
+      - name: Install test dependencies
+        run: pip3 install -r test-requirements.txt
+
+      - name: Run pip freeze
+        run: pip3 freeze --all
+
+      - name: Run tests
         run: molecule test
         env:
-          PY_COLORS: "1"
-          ANSIBLE_FORCE_COLOR: "1"
+          ANSIBLE_FORCE_COLOR: 1
+          PY_COLORS: 1
           MOLECULE_DISTRO: ${{ matrix.distro }}
