--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -4,20 +4,20 @@
   gather_facts: false
   tasks:
     - name: Ensure Shorewall6 is installed
-      stat:
+      ansible.builtin.stat:
         path: "/usr/sbin/shorewall6"
       register: result
       changed_when: false
       failed_when: result.stat.islnk is not defined or not result.stat.islnk
 
     - name: Ensure permissions on params configuration file are correct
-      stat:
+      ansible.builtin.stat:
         path: "/etc/shorewall6/params"
       register: shorewall6_params
       failed_when: shorewall6_params.stat.mode != "0640"
 
     - name: Ensure dynamic blacklist support is set correctly
-      command:
+      ansible.builtin.command:
         argv:
           - grep
           - -q
@@ -26,7 +26,7 @@
       changed_when: false
 
     - name: Ensure rule from shorewall6_group_rules is present
-      command:
+      ansible.builtin.command:
         argv:
           - grep
           - -q
@@ -35,7 +35,7 @@
       changed_when: false
 
     - name: Ensure rule from shorewall6_host_rules is present
-      command:
+      ansible.builtin.command:
         argv:
           - grep
           - -q
@@ -44,7 +44,7 @@
       changed_when: false
 
     - name: Ensure skipped rule from shorewall_host_rules is not present
-      command:
+      ansible.builtin.command:
         argv:
           - grep
           - -q
@@ -55,7 +55,7 @@
       failed_when: not grep.failed
 
     - name: Ensure non-skipped rule from shorewall_host_rules is present
-      command:
+      ansible.builtin.command:
         argv:
           - grep
           - -q
