--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,5 +3,5 @@
   hosts: all
   tasks:
     - name: "Include metabrainz.shorewall6"
-      include_role:
+      ansible.builtin.include_role:
         name: "metabrainz.shorewall6"
