--- a/molecule/default/inventory/group_vars/all.yml
+++ b/molecule/default/inventory/group_vars/all.yml
@@ -3,3 +3,8 @@ shorewall6_group_rules:
   - action: HTTPS(ACCEPT)
     source: net
     dest: $FW
+
+shorewall6_group_params:
+  NESTED_LIST:
+    - "2606:4700:4700::1111"
+    - ["2606:4700:4700::1001", "2001:4860:4860::8888"]
